--- a/emd_ssm_tools/pom.xml
+++ b/emd_ssm_tools/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.david</groupId>
-  <artifactId>emd_ssm_tools</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <name>emd_ssm_tools</name>
-  <description>this is eclipse maven david springmvc spring mybatis tools</description>
-  	<!-- <url>http://maven.apache.org</url> -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.david</groupId>
+	<artifactId>emd_ssm_tools</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>emd_ssm_tools</name>
+	<description>this is eclipse maven david springmvc spring mybatis tools</description>
+	<!-- <url>http://maven.apache.org</url> -->
 	<!-- 将一些版本号进行设置抽取 -->
 	<properties>
 		<spring.version>4.1.7.RELEASE</spring.version>
@@ -227,12 +228,25 @@
 			<version>0.9.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
-		<!-- <dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-core</artifactId>
-			<version>2.5.13</version>
-		</dependency> -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<!-- 配置构建jdk版本以及tomcat,maven版本 -->
