--- a/emd_ssm_tools/pom.xml
+++ b/emd_ssm_tools/pom.xml
@@ -107,6 +107,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -283,7 +289,10 @@
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
-					<version>2.2</version>
+					<configuration>
+					<!-- 	<path>/</path> -->
+						<port>8085</port>
+					</configuration>
 					<!-- 端口 -->
 					<!-- <port>8880</port> -->
 					<!-- 访问路径 -->
@@ -292,5 +301,20 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+				<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.xml</include>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 </project>
